[tool.poetry]
name = "test-leadhit"
version = "0.1.0"
description = ""
authors = ["Александр Рассыхаев <farexzon@yandex.ru>"]
readme = "README.md"
packages = [{include = "test_leadhit"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
