[tool.poetry]
name = "test_leadhit"
version = "1.7"
description = "Тестовый проект: Web-приложение для определения заполненных форм"
authors = ["Рассыхаев Александр, leenominai@gmail.com, Telegram: @leenominai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.0"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
tinydb = "^4.8.0"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
